--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -12,3 +12,15 @@
     width: 600px;
     border-radius: 20px;
   }
+.made, .date {
+    font-size: small;
+}
+footer {
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
+}
+body {
+    margin-bottom:50px;
+}
